# some-stupid-cpp-app

./: .gitignore  CMakeLists.txt  README.md  build.bat  buttonsAndTextFields.hpp  elements.h  elements.hpp  main.cpp  main1.cpp  student.h  textsAndFonts.hpp
src/: app.rc
